@@ -2388,7 +2388,7 @@ operator|.
 name|getType
 argument_list|()
 operator|.
-name|getName
+name|getCanonicalName
 argument_list|()
 argument_list|)
 expr_stmt|;
