@@ -41,6 +41,16 @@ name|java
 operator|.
 name|sql
 operator|.
+name|SQLException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|sql
+operator|.
 name|Types
 import|;
 end_import
@@ -334,6 +344,22 @@ operator|.
 name|testmap
 operator|.
 name|Painting
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|testdo
+operator|.
+name|testmap
+operator|.
+name|PaintingInfo
 import|;
 end_import
 
@@ -7126,6 +7152,226 @@ name|Artist
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testByteArraySelect
+parameter_list|()
+throws|throws
+name|SQLException
+block|{
+operator|new
+name|TableHelper
+argument_list|(
+name|dbHelper
+argument_list|,
+literal|"PAINTING_INFO"
+argument_list|)
+operator|.
+name|setColumns
+argument_list|(
+literal|"IMAGE_BLOB"
+argument_list|,
+literal|"PAINTING_ID"
+argument_list|)
+operator|.
+name|setColumnTypes
+argument_list|(
+name|Types
+operator|.
+name|LONGVARBINARY
+argument_list|,
+name|Types
+operator|.
+name|INTEGER
+argument_list|)
+operator|.
+name|insert
+argument_list|(
+operator|new
+name|byte
+index|[]
+block|{
+operator|(
+name|byte
+operator|)
+literal|1
+block|,
+operator|(
+name|byte
+operator|)
+literal|2
+block|,
+operator|(
+name|byte
+operator|)
+literal|3
+block|,
+operator|(
+name|byte
+operator|)
+literal|4
+block|,
+operator|(
+name|byte
+operator|)
+literal|5
+block|}
+argument_list|,
+literal|1
+argument_list|)
+operator|.
+name|insert
+argument_list|(
+operator|new
+name|byte
+index|[]
+block|{
+operator|(
+name|byte
+operator|)
+literal|5
+block|,
+operator|(
+name|byte
+operator|)
+literal|4
+block|,
+operator|(
+name|byte
+operator|)
+literal|3
+block|,
+operator|(
+name|byte
+operator|)
+literal|2
+block|}
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|byte
+index|[]
+argument_list|>
+name|blobs
+init|=
+name|ObjectSelect
+operator|.
+name|columnQuery
+argument_list|(
+name|PaintingInfo
+operator|.
+name|class
+argument_list|,
+name|PaintingInfo
+operator|.
+name|IMAGE_BLOB
+argument_list|)
+operator|.
+name|orderBy
+argument_list|(
+literal|"db:"
+operator|+
+name|PaintingInfo
+operator|.
+name|PAINTING_ID_PK_COLUMN
+argument_list|)
+operator|.
+name|select
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|blobs
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertArrayEquals
+argument_list|(
+operator|new
+name|byte
+index|[]
+block|{
+operator|(
+name|byte
+operator|)
+literal|1
+block|,
+operator|(
+name|byte
+operator|)
+literal|2
+block|,
+operator|(
+name|byte
+operator|)
+literal|3
+block|,
+operator|(
+name|byte
+operator|)
+literal|4
+block|,
+operator|(
+name|byte
+operator|)
+literal|5
+block|}
+argument_list|,
+name|blobs
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertArrayEquals
+argument_list|(
+operator|new
+name|byte
+index|[]
+block|{
+operator|(
+name|byte
+operator|)
+literal|5
+block|,
+operator|(
+name|byte
+operator|)
+literal|4
+block|,
+operator|(
+name|byte
+operator|)
+literal|3
+block|,
+operator|(
+name|byte
+operator|)
+literal|2
+block|}
+argument_list|,
+name|blobs
+operator|.
+name|get
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
